[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/menu/start_menu.png" type="Texture" id=1]
[ext_resource path="res://scenes/StartMenu.gd" type="Script" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 89 )
texture = ExtResource( 1 )

[node name="LoadLevel" type="Button" parent="."]
margin_left = 93.0
margin_top = 57.0
margin_right = 233.0
margin_bottom = 77.0
text = "Start game"

[node name="Exit" type="Button" parent="."]
margin_left = 94.0
margin_top = 89.0
margin_right = 232.0
margin_bottom = 109.0
text = "Exit game"

[connection signal="pressed" from="LoadLevel" to="." method="_on_LoadLevel_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
